# SonicModBus

./: .gitignore  .pylint-spelling-words  .pyway.conf  README.md  mariadb-docker-compose.yml  pyproject.toml
docs/: api.md  conf.py  data-collection.md  getting-started.md  index.md  publishing.md
docs/apidocs/: index.rst
docs/apidocs/sonic_modbus/: sonic_modbus.baud_rate.md  sonic_modbus.constants.md  sonic_modbus.md  sonic_modbus.scan.md  sonic_modbus.sensor.md  sonic_modbus.sensor_reading.md  sonic_modbus.wind_direction.md
scripts/: collect_reading.py  sync-wiki.sh  wiki_postprocess.py
sonic_modbus/: __init__.py  baud_rate.py  constants.py  scan.py  sensor.py  sensor_reading.py  wind_direction.py
sonic_persistence/: __init__.py  config.py  database.py  models.py  repository.py  types.py
sonic_persistence/db/migrations/: V01_01__create_sensor_reading.sql
tests/: test_local_to_utc_datetime.py  test_sensor.py  test_sensor_reading_repository.py  test_wiki_postprocess.py
